[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/ShaderHandler.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Shader.tscn" type="PackedScene" id=2]

[node name="ShaderHandler" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" type="CanvasLayer" parent="."]
layer = 99

[node name="ColorRect" parent="Canvas" instance=ExtResource( 2 )]

[node name="WarningHolder" type="Control" parent="Canvas"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
